plugins {
	id 'org.springframework.boot' version '2.7.2'
	id 'io.spring.dependency-management' version '1.0.12.RELEASE'
	id 'java'
}

group = 'com.bytehonor.server'
version = '0.1.12'
sourceCompatibility = '1.8'

configurations {
	compileOnly {
		extendsFrom annotationProcessor
	}
}

repositories {
	mavenCentral()
	maven { url "https://maven.huajietaojin.cn/repository/bytehonor/" }
}

ext {
	set('springCloudVersion', "2021.0.3")
}

dependencies {
    implementation('com.bytehonor.sdk:spring-server-sdk:1.7.35')
    implementation('com.bytehonor.sdk:jdbc-starter-sdk:0.4.3')
    implementation('com.bytehonor.sdk:redis-starter-sdk:0.2.8')
	implementation('org.springframework.boot:spring-boot-starter-web')
	annotationProcessor('org.springframework.boot:spring-boot-configuration-processor')
	runtimeOnly('mysql:mysql-connector-java')
	developmentOnly('org.springframework.boot:spring-boot-devtools')
	testImplementation('org.springframework.boot:spring-boot-starter-test')
}

dependencyManagement {
	imports {
		mavenBom "org.springframework.cloud:spring-cloud-dependencies:${springCloudVersion}"
	}
}

tasks.named('test') {
	useJUnitPlatform()
}
